[gd_scene load_steps=9 format=3 uid="uid://b5d1vn0weqyas"]

[ext_resource type="Script" path="res://animal/animal.gd" id="1_152kh"]
[ext_resource type="Texture2D" uid="uid://bommgmkpp6c5r" path="res://assets/player/parrot.png" id="1_jbr8i"]
[ext_resource type="AudioStream" uid="uid://48ljlomptcdw" path="res://assets/audio/stretch2.ogg" id="3_kmyeo"]
[ext_resource type="AudioStream" uid="uid://daga5qhw2kb83" path="res://assets/audio/catapult.ogg" id="4_8sd7f"]
[ext_resource type="AudioStream" uid="uid://dxkjh81lc07gt" path="res://assets/audio/kick_wood.ogg" id="5_xhhvf"]
[ext_resource type="Texture2D" uid="uid://b7gj8gwa3o7hn" path="res://assets/items/arrow.png" id="6_cy0ii"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_wycs2"]
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_vvn2h"]
radius = 19.0263

[node name="Animal" type="RigidBody2D" groups=["animal"]]
input_pickable = true
physics_material_override = SubResource("PhysicsMaterial_wycs2")
max_contacts_reported = 1
contact_monitor = true
freeze = true
script = ExtResource("1_152kh")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("1_jbr8i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vvn2h")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, -1)
scale = Vector2(1.9, 1.9)

[node name="ScretchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kmyeo")

[node name="LaunchSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8sd7f")

[node name="CollisionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_xhhvf")

[node name="ArrowSprite" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.34466, 0.34466)
texture = ExtResource("6_cy0ii")
offset = Vector2(150, 0)

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
